# STLINK-V3-BRIDGE_libusb

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  STLINK-V3-BRIDGE.pro  meson.build
.github/workflows/: main.yml
example/: main.cpp  meson.build
example/STLinkV3-Bridge-API-test-ui/: STLinkV3-Bridge-API-test-ui.pro  gpiobitsettingswidget.cpp  gpiobitsettingswidget.h  gpiobitsettingswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/bridge/: bridge.cpp  bridge.h  stlink_fw_api_bridge.h  stlink_fw_const_bridge.h
src/common/: STLinkUSBDriver.h  criticalsectionlock.cpp  criticalsectionlock.h  stlink_device.cpp  stlink_device.h  stlink_fw_api_common.h  stlink_if_common.h  stlink_interface.cpp  stlink_interface.h  stlink_type.h
src/error/: ErrLog.cpp  ErrLog.h
